@@ -1,5 +1,5 @@
 {
-"name" : "Java Script Language Plugin",
+"name" : "Javascript Language Plugin",
 "version" : "0.0.1",
 "langname" : "Javascript",
 "mimetypes" : "application/javascript"
