@@ -1,26 +1,26 @@
 /*
  *
- * ©K. D. Hedger. Wed 16 Mar 11:12:16 GMT 2022 keithdhedger@gmail.com
+ * ©K. D. Hedger. Wed 16 Mar 14:23:10 GMT 2022 keithdhedger@gmail.com
 
- * This file (htmllang.cpp) is part of htmllang.
+ * This file (phplang.cpp) is part of phplang.
 
- * htmllang is free software: you can redistribute it and/or modify
+ * phplang is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * at your option) any later version.
 
- * htmllang is distributed in the hope that it will be useful,
+ * phplang is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
  * You should have received a copy of the GNU General Public License
- * along with htmllang.  If not, see <http://www.gnu.org/licenses/>.
+ * along with phplang.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include "htmllang.h"
+#include "phplang.h"
 
-void htmllang::initPlug(QString pathtoplug)
+void phplang::initPlug(QString pathtoplug)
 {
 	themeStruct	blank={Qt::black,QFont::Normal,false};
 
@@ -30,12 +30,12 @@ void htmllang::initPlug(QString pathtoplug)
 			this->theme[j]=blank;
 }
 
-void htmllang::unloadPlug(void)
+void phplang::unloadPlug(void)
 {
 }
 
 //new format
-void htmllang::setLanguageRules(QVector<highLightingRule> *rules)
+void phplang::setLanguageRules(QVector<highLightingRule> *rules)
 {
 	highLightingRule	hr;
 
@@ -43,7 +43,8 @@ void htmllang::setLanguageRules(QVector<highLightingRule> *rules)
 	hr.format.setFontItalic(this->theme[FUNCTIONTHEME].italic);
 	hr.format.setFontWeight(this->theme[FUNCTIONTHEME].weight);
 	hr.format.setForeground(this->theme[FUNCTIONTHEME].colour);
-	hr.pattern=QRegularExpression("^[[:space:]]*function[[:space:]]*[A-Za-z0-9_]+(?=\\()");
+//	hr.pattern=QRegularExpression("\\b[A-Za-z0-9_]+[[:space:]]*(?=\\()");
+	hr.pattern=QRegularExpression("\\b[A-Za-z0-9_]+(?=\\()");
 	rules->append(hr);
 
 //angle brackets
@@ -59,13 +60,6 @@ void htmllang::setLanguageRules(QVector<highLightingRule> *rules)
 	hr.format.setFontItalic(this->theme[QUOTESTHEME].italic);
 	hr.pattern = QRegularExpression("(\".*\")|('.*')");
 	rules->append(hr);
-//
-////variables
-	hr.format.setForeground(this->theme[CUSTOMTHEME].colour);
-	hr.format.setFontWeight(this->theme[CUSTOMTHEME].weight);
-	hr.format.setFontItalic(this->theme[CUSTOMTHEME].italic);
-	hr.pattern=QRegularExpression("([[:word:]_]*)(?=[[:space:]]*=)");
-	rules->append(hr);
 
 //numbers
 	hr.format.setForeground(this->theme[NUMBERTHEME].colour);
@@ -73,31 +67,51 @@ void htmllang::setLanguageRules(QVector<highLightingRule> *rules)
 	hr.format.setFontItalic(this->theme[NUMBERTHEME].italic);
 	hr.pattern=QRegularExpression("([+-]?\\b[[:digit:]]*\\.?[[:digit:]]+([eE][+-]?[[:digit:]]+)?\\b)|([+-]?\\b0x[[:xdigit:]]*\\.?[[:xdigit:]]+\\b)");
 	rules->append(hr);
-//
+
+//keywords
+	hr.format.setForeground(this->theme[KEYWORDTHEME].colour);
+	hr.format.setFontWeight(this->theme[KEYWORDTHEME].weight);
+	hr.format.setFontItalic(this->theme[KEYWORDTHEME].italic);
+	hr.pattern=QRegularExpression("\\b(__FILE__|exception|php_user_filter|__LINE__|abstract|array|as|break|case|catch|cfunction|class|clone|const|continue|declare|default|do|while|for|each|echo|else|elseif|empty|enddeclare|endfor|endforeach|endif|endswitch|endwhile|eval|exit|extends|final|foreach|function|global|goto|if|implements|interface|instanceof|isset|list|namespace|new|old_function|print|private|protected|public|return|static|switch|throw|unset|use|var|__FUNCTION__|__CLASS__|__METHOD__|__DIR__|__NAMESPACE__)\\b");
+	rules->append(hr);
+
 //types
 	hr.format.setForeground(this->theme[TYPETHEME].colour);
 	hr.format.setFontWeight(this->theme[TYPETHEME].weight);
 	hr.format.setFontItalic(this->theme[TYPETHEME].italic);
-	hr.pattern=QRegularExpression("\\&#?[[:alnum:]]+;|\\bconst\\b");
+	hr.pattern=QRegularExpression("\\b(and|or|xor|null|true|false|NULL|TRUE|FALSE)\\b");
+	rules->append(hr);
+
+//variables
+	hr.format.setForeground(this->theme[CUSTOMTHEME].colour);
+	hr.format.setFontWeight(this->theme[CUSTOMTHEME].weight);
+	hr.format.setFontItalic(this->theme[CUSTOMTHEME].italic);
+	hr.pattern=QRegularExpression("\\$[[:word:]]*");
+	rules->append(hr);
+
+//single line comment
+	hr.format.setForeground(this->theme[COMMENTTHEME].colour);
+	hr.format.setFontWeight(this->theme[COMMENTTHEME].weight);
+	hr.format.setFontItalic(this->theme[COMMENTTHEME].italic);
+	hr.pattern=QRegularExpression("\\#[^\\n]*|//[^\\n]*");
 	rules->append(hr);
 }
 
 //odd single formats set to "" for no multiline comment
-void htmllang::setMultLineFormatStart(highLightingRule *hr)
+void phplang::setMultLineFormatStart(highLightingRule *hr)
 {
 	hr->format.setForeground(this->theme[COMMENTTHEME].colour);
 	hr->format.setFontWeight(this->theme[COMMENTTHEME].weight);
 	hr->format.setFontItalic(this->theme[COMMENTTHEME].italic);
-	hr->pattern = QRegularExpression("<!--");
-
+	hr->pattern = QRegularExpression("/\\*");
 }
 
-void htmllang::setMultLineFormatStop(highLightingRule *hr)
+void phplang::setMultLineFormatStop(highLightingRule *hr)
 {
-	hr->pattern = QRegularExpression("-->");
+	hr->pattern = QRegularExpression("\\*/");
 }
 
-void htmllang::setTheme(QHash<int,themeStruct> newtheme)
+void phplang::setTheme(QHash<int,themeStruct> newtheme)
 {
 	this->theme=newtheme;
 }
